# Space-Invaders-Cpp-with-QT

./: .gitignore  001MyRect with qDebug on key press.cpp  Bullet.cpp  CMakeLists.txt  Enemies.cpp  Enemies.h  MyRect.cpp  MyRect.h  QGraphics rectangle.cpp  README.md  game.cpp  game.h  health.cpp  health.h  main.cpp  res.qrc  score.cpp
spinvader/: Bullet.cpp  Bullet.h  CMakeLists.txt  Enemies.cpp  Enemies.h  MyRect.cpp  game.cpp  game.h  health.cpp  main.cpp  res.qrc  score.h  spriteselector.cpp  spriteselector.h
